--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 
             </div>
 
-            <div class="right-container">
+            <canvas id="imageCanvas" class="image-canvas"></canvas>
 
-                <canvas id="imageCanvas" class="image-canvas"></canvas>
+            <div id="rightContainer" class="right-container">
 
                 <canvas id="resultCanvas" class="result-canvas"></canvas>
+
+                <button id="download"> Download </button>
+                <a id="link"></a>
             </div>
         </div>    
 
