--- a/index.html
+++ b/index.html
@@ -21,12 +21,28 @@
                         <input type="number" id="height" min="1" max="100" value="16" class="dimensions-input"/>
                         <input type="checkbox" id="monochrome" class="dimensions-item">
                         <label for="monochrome"> Monochrome </label>
+                        <input type="checkbox" id="palette" class="dimensions-item">
+                        <label for="palette"> Custom Colors </label>
                         <button id="generate" class="dimensions-item"> Generate </button>
                     </div>
                     <label class="image-label" for="image"> Choose an Image </label>
                     <input class="image-input" type="file" id="image" accept="image/png, image/jpeg" />
                 </div>
 
+                <div id="colors-container" class="colors-container">
+                    <div>
+                        <label for="new-color"> Add Color: </label>
+                        <input id="new-color" type="color" />
+                        <!-- 
+                        <label for="import"> Import Palette</label>
+                        <input id="import" type="file" accept="image/png, image/jpeg">
+                        -->
+                    </div>
+                    
+                    <div id="colors" class="colors">
+
+                    </div>
+                </div>
             </div>
 
             <canvas id="imageCanvas" class="image-canvas"></canvas>
